[gd_scene load_steps=2 format=2]

[ext_resource path="res://Demo/Demo.gd" type="Script" id=1]

[node name="Demo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3

[node name="HSplitContainer3" type="HSplitContainer" parent="HBoxContainer"]
margin_right = 10.0
margin_bottom = 600.0
rect_min_size = Vector2( 10, 0 )

[node name="ControlRoom" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 14.0
margin_right = 792.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="VSplitContainer3" type="VSplitContainer" parent="HBoxContainer/ControlRoom"]
margin_right = 778.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="Status" type="HBoxContainer" parent="HBoxContainer/ControlRoom"]
margin_top = 14.0
margin_right = 778.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="SocketStatus" type="Label" parent="HBoxContainer/ControlRoom/Status"]
margin_right = 387.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Socket: Disconnected"

[node name="ChannelSatus" type="Label" parent="HBoxContainer/ControlRoom/Status"]
margin_left = 391.0
margin_right = 778.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Channel: Closed"

[node name="ServerConnect" type="HBoxContainer" parent="HBoxContainer/ControlRoom"]
editor/display_folded = true
margin_top = 32.0
margin_right = 778.0
margin_bottom = 56.0

[node name="Username" type="LineEdit" parent="HBoxContainer/ControlRoom/ServerConnect"]
margin_right = 200.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
text = "username"

[node name="Host" type="LineEdit" parent="HBoxContainer/ControlRoom/ServerConnect"]
margin_left = 204.0
margin_right = 710.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "ws://localhost:4000/socket"

[node name="Connect" type="Button" parent="HBoxContainer/ControlRoom/ServerConnect"]
margin_left = 714.0
margin_right = 778.0
margin_bottom = 24.0
text = "Connect"

[node name="ChannelJoin" type="HBoxContainer" parent="HBoxContainer/ControlRoom"]
editor/display_folded = true
margin_top = 60.0
margin_right = 778.0
margin_bottom = 84.0

[node name="Topic" type="LineEdit" parent="HBoxContainer/ControlRoom/ChannelJoin"]
margin_right = 401.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "game:room_123"

[node name="JoinTopic" type="Button" parent="HBoxContainer/ControlRoom/ChannelJoin"]
margin_left = 405.0
margin_right = 478.0
margin_bottom = 24.0
text = "Join Topic"

[node name="Label" type="Label" parent="HBoxContainer/ControlRoom/ChannelJoin"]
margin_left = 482.0
margin_top = 5.0
margin_right = 778.0
margin_bottom = 19.0
text = "See code for custom connect and join params."

[node name="VSplitContainer" type="VSplitContainer" parent="HBoxContainer/ControlRoom"]
margin_top = 88.0
margin_right = 778.0
margin_bottom = 98.0
rect_min_size = Vector2( 0, 10 )

[node name="Log" type="RichTextLabel" parent="HBoxContainer/ControlRoom"]
margin_top = 102.0
margin_right = 778.0
margin_bottom = 586.0
size_flags_vertical = 3

[node name="VSplitContainer2" type="VSplitContainer" parent="HBoxContainer/ControlRoom"]
margin_top = 590.0
margin_right = 778.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 10 )

[node name="HSplitContainer" type="HSplitContainer" parent="HBoxContainer"]
margin_left = 796.0
margin_right = 806.0
margin_bottom = 600.0
rect_min_size = Vector2( 10, 0 )

[node name="Presence" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 810.0
margin_right = 1010.0
margin_bottom = 600.0
grow_horizontal = 0
rect_min_size = Vector2( 200, 0 )
rect_pivot_offset = Vector2( 10, 0 )

[node name="VSplitContainer4" type="VSplitContainer" parent="HBoxContainer/Presence"]
margin_right = 200.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="Label" type="Label" parent="HBoxContainer/Presence"]
margin_top = 14.0
margin_right = 200.0
margin_bottom = 28.0
text = "Users Online"
align = 1

[node name="PresenceList" type="RichTextLabel" parent="HBoxContainer/Presence"]
margin_top = 32.0
margin_right = 200.0
margin_bottom = 600.0
size_flags_vertical = 3
text = "- User
- User
...."

[node name="HSplitContainer2" type="HSplitContainer" parent="HBoxContainer"]
margin_left = 1014.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 10, 0 )

[connection signal="pressed" from="HBoxContainer/ControlRoom/ServerConnect/Connect" to="." method="_on_Connect_pressed"]
